Fix content in code block overflow due to fixed height

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,7 +93,6 @@ code {
 }
 pre>code {
   display: block;
-  height: 20px;
   color: #076527;
   background-color: #e7f6ec;
 }
